fixed line spacing , removed capitalisation

--- a/assets/stylesheets/cs.global.css
+++ b/assets/stylesheets/cs.global.css
@@ -107,7 +107,7 @@ h1, h2, h3, h4, h5 {
 
 h1 {
     color: #202020;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     margin: 0;
     font-size: 20px;
     font-weight: 400;
@@ -126,12 +126,12 @@ h3 {
     color: #808080;
     font-size: 20px;
     font-weight: 700;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
 }
 
 h4 {
     color: #808080;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-size: 16px;
     font-weight: 700;
     line-height: 20px;
@@ -140,7 +140,7 @@ h4 {
 h5 {
     color: #000000;
     font-size: 20px;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-weight: 500;
     margin-top: 0;
     margin-bottom: 25px;
@@ -149,7 +149,7 @@ h5 {
 h6 {
     color: #000000;
     font-size: 20px;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-weight: 400;
     margin-top: 5px;
     margin-bottom: 20px;
